--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title><%= title %></title>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag 'http://code.jquery.com/jquery-1.6.min.js' %>
+  <%= javascript_include_tag 'rails', 'application'%>
   <%= csrf_meta_tag %>
   <%= render 'layouts/stylesheets' %>
 </head>
